# Risu-OS

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  vga_buffer.rs
