[package]
name = "risu_os"
version = "0.0.1"
authors = ["RisuSofos <risusofos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.16", features = ["map_physical_memory"] }
x86_64 = "0.14.0"
vcell = "0.1.3"
lazy_static = "1.4.0"
spin = "0.9.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

#[package.metadata.bootimage]
#test-args = [
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"
#    ,"-serial", "stdio"
#    ,"-display", "none"
#]
#test-success-exit-code = 33
#test-timeout = 60